# SoulsEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp
assets/: demo.escene  scene.escene
assets/model/: bunny.off  elephant_n.off  icosphere.mtl  triangle.off
include/: Application.hpp  Exceptions.hpp  Utils.hpp
include/Benchmark/: ECSBenchmark.hpp
include/Core/: AssetLoader.hpp  Base.hpp  Event.hpp  Geometry.hpp  Input.hpp  KeyCode.hpp  Layer.hpp  LayerStack.hpp  Logger.hpp  Profiling.hpp  Window.hpp
include/ECS/: ComponentArray.hpp  ComponentManager.hpp  Components.hpp  EntityManager.hpp  Exceptions.hpp  Node.hpp  Scene.hpp  System.hpp  SystemManager.hpp
include/ECS/Components/: Light.hpp  MeshRenderer.hpp  Node.hpp  Player.hpp  RigidBody.hpp  Rigidbody.hpp
include/ECS/Systems/: LightSystem.hpp  PhysicSystem.hpp  PlayerSystem.hpp  RenderSystem.hpp
include/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
include/GUI/: ComponentsEditor.hpp  ContentBrowser.hpp  GUI.hpp  GraphScene.hpp  ProfileDisplay.hpp  TextInput.hpp
include/Layers/: DebugLayer.hpp  ECSLayer.hpp  EditorLayer.hpp  ImGuiLayer.hpp
include/Managers/: ComponentManager.hpp  EntityManager.hpp  EventManager.hpp  SystemManager.hpp  WindowManager.hpp
include/Physics/: AABB.hpp  BoundingBox.hpp  OBB.hpp  RigidBody.hpp  Transform.hpp
include/Render/: AABB.hpp  BoundingBox.hpp  Camera.hpp  DataHolder.hpp  Framebuffer.hpp  Material.hpp  Mesh.hpp  MeshLoader.hpp  OBB.hpp  Shader.hpp  Texture.hpp  TextureLoader.hpp  TrackBallCamera.hpp
include/Rendering/: Camera.hpp  Mesh.hpp  Model.hpp  Shader.hpp
include/Systems/: PhysicSystem.hpp  RenderingSystem.hpp
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: basic_fragment.glsl  basic_vertex.glsl  depth_fragment.glsl  depth_vertex.glsl  legacy_fragment.glsl  legacy_vertex.glsl  light_fragment.glsl  light_vertex.glsl  model_fragment.glsl  model_vertex.glsl  outline_fragment.glsl  simple_fragment.glsl  simplefragment.glsl  simplevertex.glsl
src/: Application.cpp
src/Benchmark/: ECSBenchmark.cpp
src/Core/: AssetLoader.cpp  Geometry.cpp  Input.cpp  LayerStack.cpp  Logger.cpp  Profiling.cpp  Window.cpp
src/ECS/: ComponentArray.cpp  EntityManager.cpp  Node.cpp  RigidBody.cpp  Rigidbody.cpp  Scene.cpp  System.cpp
src/ECS/Systems/: LightSystem.cpp  PhysicSystem.cpp  PlayerSystem.cpp  RenderSystem.cpp
src/GUI/: ComponentsEditor.cpp  ContentBrowser.cpp  GUI.cpp  GraphScene.cpp
src/Layers/: DebugLayer.cpp  ECSLayer.cpp  EditorLayer.cpp  ImGuiLayer.cpp
src/Managers/: ComponentManager.cpp  EntityManager.cpp  EventManager.cpp  SystemManager.cpp  WindowManager.cpp
src/Physics/: AABB.cpp  BoundingBox.cpp  OBB.cpp
src/Render/: AABB.cpp  BoundingBox.cpp  Camera.cpp  DataHolder.cpp  Framebuffer.cpp  Material.cpp  Mesh.cpp  MeshLoader.cpp  OBB.cpp  Shader.cpp  Texture.cpp  TextureLoader.cpp  TrackBallCamera.cpp
src/Rendering/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp
src/Systems/: PhysicSystem.cpp  RenderingSystem.cpp
